OCW-503 #comment changing border and padding on image-feature items, changed font weight on body to 300 and font size on feature overlay on homepage to 55px.  Fixed row spacing on related articles

--- a/core/static/css/_header.scss
+++ b/core/static/css/_header.scss
@@ -101,7 +101,6 @@ header{
 
     ul li a{
       font-family: $sans-serif;
-      font-weight: 700;
     }
 
     ul li a:hover{
