--- a/core/static/css/_main.scss
+++ b/core/static/css/_main.scss
@@ -8,6 +8,7 @@ body{
   color: $text-color;
   font-family: $serif;
   font-size: 15px;
+  font-weight: 300;
   height: auto;
   line-height: 1.5;
 }
